src/objects/UGI_Audit__c.object
<CustomObject>
    <fields>
        <fullName>Business_Units__c</fullName>
        <label>Business Units</label>
        <picklist>
            <picklistValues>
                <fullName>Recurring Engagements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AmeriGas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Control__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Control</label>
        <referenceTo>UGI_Control_Mitigation__c</referenceTo>
        <relationshipLabel>Audits</relationshipLabel>
        <relationshipName>Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deliverable__c</fullName>
        <label>Deliverable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_Type__c</fullName>
        <formula>IF(ISPICKVAL(Type__c,&apos;Process Reviews&apos;),&apos;Full scope engagement with walkthrough and detailed testings.&apos;, 
IF(ISPICKVAL(Type__c,&apos;High-Level Reviews&apos;),&apos;Limited scope engagement which may include walkthroughs and/or limited testings.&apos;,
IF(ISPICKVAL(Type__c,&apos;Consulting Reviews&apos;),&apos;Reviews that have been requested by management.&apos;,
IF(ISPICKVAL(Type__c,&apos;Other Audit Activities&apos;),&apos;Cyclical audits or review activities. Includes district audits, due diligence reviews, project monitoring activities, and external auditor assistance.&apos;,
&apos;&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description of Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating_Provided__c</fullName>
        <label>Rating Provided</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>If Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <picklist>
            <picklistValues>
                <fullName>All Entities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Domestic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Domestic &amp; International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AmeriGas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antargaz / Finagaz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AvantiGas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flaga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UGI Energy Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UGI Utilities</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Timing__c</fullName>
        <label>Timing</label>
        <picklist>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Process Reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High-Level Reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting Reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Audit Activities</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>UGI Audit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>